<resources>
    <string name="app_name">DoAn_Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--Phần của Nguyễn Thu Tuyết-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="lich_thang">Lịch Tháng</string>
    <string name="bao_thuc">Báo Thức</string>
    <string name="bam_gio">Bấm Giờ</string>
    <string name="dem_nguoc">Đếm Ngược</string>
    <string name="mo_rong">Mở Rộng</string>
    <string name="chuyen_doi">Chuyển Đổi</string>


    <string name="cadao">Hiểu biết, phải chăng ta hiểu biết tới những
                         nguyên tắc và nguyên nhân của sự việc</string>

    <!--Phần của Phạm Minh Hiển-->
    <string name="timer">Time</string>
    <string name="start_timer">Start</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="timeIsUP">Time is up</string>
    <string name="wrongInputForTimer">Please enter appropriate values !! </string>

    <!--Phần của Ngô Thị Ngọc Diễm-->
    <!--xu ly phan giao dien 1: giao diện chính-->
    <string name="text_lbl_ten">BÁO THỨC</string>
    <!--bao thuc item-->
    <string name="text_giobt">08:00</string>
    <string name="text_ngaybt">SA</string>
    <string name="text_mota">Mô tả</string>

    <string name="text_chunhat">CN</string>
    <string name="text_thu2">T2</string>
    <string name="text_thu3">T3</string>
    <string name="text_thu4">T4</string>
    <string name="text_thu5">T5</string>
    <string name="text_thu6">T6</string>
    <string name="text_thu7">T7</string>

    <!--xu ly phan giao dien 2: cài báo thức-->
    <string name="text_lbl_create">CÀI BÁO THỨC</string>
    <string name="text_edt_ghichu">Ghi chú</string>
    <string name="text_btn_chongio">Click vào đây để chọn giờ!</string>
    <string name="text_chuongbt">Chuông báo thức</string>
    <string name="hint_macdinh">Mặc định(Last Christmas)</string>
    <string name="text_laplai">Lặp lại</string>
    <string name="hint_ngay">Chủ nhật</string>
    <string name="text_baorung">Báo rung</string>
    <string name="text_btn_huytao">Huỷ bỏ</string>
    <string name="text_btn_hoantat">Hoàn tất</string>

    <!--xu ly phan giao dien 3: xoá báo thức-->
    <string name="text_lbl_delete">XOÁ BÁO THỨC</string>
    <string name="text_btn_xoa">Xoá(0)</string>
    <string name="text_btn_huy">Huỷ bỏ</string>

    <!--xu ly phan giao dien 3: chuông báo thức-->
    <string name="text_lbl_ring">CHUÔNG BÁO THỨC</string>
    <string name="text_btn_ring">Áp dụng</string>
    <string name="text_lbl_tenchuong">Mặc định</string>
    <!--xu ly phan giao dien 5: Hẹn giờ báo thức-->
    <string name="text_lbl_hengio">BÁO THỨC</string>
    <string name="text_hiengio_macdinh">10:00</string>
    <string name="text_hienghichu_macdinh">Đi làm</string>
    <string name="text_btn_tathengio">TẮT BÁO THỨC</string>

</resources>
